--- a/home.html
+++ b/home.html
@@ -1,1 +1,134 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Pamoja Health Tracker - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f4f6f8;
+    }
 
+    header {
+      background-color: #007bff;
+      padding: 20px;
+      text-align: center;
+      color: white;
+    }
+
+    nav {
+      background-color: #0056b3;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 20px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    .services {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      padding: 40px 20px;
+      gap: 20px;
+    }
+
+    .card {
+      background-color: white;
+      padding: 20px;
+      width: 280px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .card h3 {
+      margin-bottom: 10px;
+      color: #007bff;
+    }
+
+    .card p {
+      color: #555;
+    }
+
+    .card button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .card button:hover {
+      background-color: #0056b3;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #e9ecef;
+      color: #555;
+      margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Pamoja Health Tracker</h1>
+  </header>
+
+  <nav>
+    <a href="home.html">Home</a>
+    <a href="report.html">Report Issue</a>
+    <a href="view.html">View Reports</a>
+    <a href="about.html">About</a>
+    <a href="#" onclick="logout()">Logout</a>
+  </nav>
+
+  <section class="services">
+    <div class="card">
+      <h3>Submit Health Issue</h3>
+      <p>Report a health issue in your area easily and quickly.</p>
+      <button onclick="location.href='report.html'">Report Now</button>
+    </div>
+
+    <div class="card">
+      <h3>Community Reports</h3>
+      <p>See what other users have reported in your community.</p>
+      <button onclick="location.href='view.html'">View Reports</button>
+    </div>
+
+    <div class="card">
+      <h3>Nearby Clinics</h3>
+      <p>Find clinics and health centers close to your location.</p>
+      <button>Find Clinics</button>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 Pamoja Health Tracker. All rights reserved.
+  </footer>
+
+  <script>
+    function logout() {
+      alert("Logging out...");
+      location.href = "login.html"; // Rudisha user kwenye login page
+    }
+  </script>
+
+</body>
+</html>
