--- a/about.html
+++ b/about.html
@@ -72,9 +72,9 @@
 
   <!-- CONTENT -->
   <div class="container">
-    <h1>About Pamoja Health Tracker</h1>
+    <h1>About Public Health Tracker</h1>
     <p>
-      Pamoja Health Tracker is a community health reporting web application aimed at connecting citizens 
+      Public Health Tracker is a community health reporting web application aimed at connecting citizens 
       and healthcare providers. It allows users to submit health reports from their local areas, enabling 
       early detection and response to health-related issues.
     </p>
@@ -87,7 +87,7 @@
 
   <!-- FOOTER -->
   <footer>
-    &copy; 2025 Pamoja Health Tracker. Community health reporting.
+    &copy; 2025 Public Health Tracker. Community health reporting.
   </footer>
 
 </body>
