--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us - Pamoja Health Tracker</title>
+  <title>Contact Us - Public Health Tracker</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
@@ -93,7 +93,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 Pamoja Health Tracker. </p>
+    <p>&copy; 2025 Public Health Tracker.</p>
     <p>Connecting communities through digital health innovation.</p>
   </footer>
 
