--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 <body>
 
   <header>
-    <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="Public Health Logo" />
-    <h1>Pamoja Health Tracker</h1>
+    <img src="https://cdn-icons-png.flaticon.com/512/2965/2965567.png" alt="Public Health Logo" />
+    <h1>Public Health Tracker</h1>
   </header>
 
   <main>
@@ -116,7 +116,7 @@
   </main>
 
   <footer>
-    &copy; 2025 Public Health Tracker. All rights reserved.
+    &copy; 2025 Public Health Tracker. To build healthcare tommorow ,rogether.
   </footer>
 
   <script>
