--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body>
 
   <header>
-    <img src="https://cdn-icons-png.flaticon.com/512/2965/2965567.png" alt="Public Health Logo" />
+    <img src="https://cdn-icons-png.flaticon.com/512/854/854894.png" alt="Health Logo" width="60" height="60" />
     <h1>Public Health Tracker</h1>
   </header>
 
