--- a/report.html
+++ b/report.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Report Health Issue - Pamoja Health Tracker</title>
+  <title>Report Health Issue - Public Health Tracker</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -130,7 +130,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Pamoja Health Tracker. All rights reserved.
+    &copy; 2025 Public Health Tracker. All rights reserved.
   </footer>
 
   <script>
