--- a/report.html
+++ b/report.html
@@ -101,7 +101,7 @@
     <div class="links">
       <a href="home.html">Home</a>
       <a href="report.html">Report</a>
-      <a href="About.html">Services</a>
+      <a href="About.html">About</a>
       <a href="contact.html">Contact</a>
     </div>
   </nav>
