--- a/report.html
+++ b/report.html
@@ -97,7 +97,7 @@
 <body>
 
   <nav>
-    <div class="logo">Pamoja- Health Tracker</div>
+    <div class="logo">Public- Health Tracker</div>
     <div class="links">
       <a href="home.html">Home</a>
       <a href="report.html">Report</a>
