--- a/home.html
+++ b/home.html
@@ -93,9 +93,10 @@
 
   <nav>
     <a href="home.html">Home</a>
-    <a href="report.html">Report Issue</a>
+    <a href="About.html">About</a>
     <a href="view-report.html">View Report</a>
-    <a href="#" onclick="logout()">Logout</a>
+    <a href="Contact.html">Contact</a>
+
   </nav>
 
   <section class="services">
@@ -108,18 +109,18 @@
     <div class="card">
       <h3>Community Reports</h3>
       <p>See what other users have reported in your community.</p>
-      <button onclick="location.href='view.html'">View Reports</button>
+      <button onclick="location.href='view report.html'">View Reports</button>
     </div>
 
     <div class="card">
       <h3>Nearby Clinics</h3>
       <p>Find clinics and health centers close to your location.</p>
-      <button>Find Clinics</button>
+      <button onclick="location.href='Find clinics.html>Find Clinics</button>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 Pamoja Health Tracker. All rights reserved.
+    &copy; 2025 Public Health Tracker.To protect our community .
   </footer>
 
   <script>
