--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 <body>
 
   <header>
+    <img src="https://via.placeholder.com/60" alt="Logo" />
     <h1>Public Health Tracker</h1>
   </header>
 
@@ -115,7 +116,7 @@
   </main>
 
   <footer>
-    &copy; 2025 Public Health Tracker. To build healthcare tommorow ,rogether.
+    &copy; 2025 Public Health Tracker. Health is important.
   </footer>
 
   <script>
@@ -128,7 +129,8 @@
         errorMsg.style.display = "block";
       } else {
         errorMsg.style.display = "none";
-        window.location.href = "report.html"; // ✅ Redirect to report page
+        // Redirect to home.html after successful login
+        window.location.href = "home.html";
       }
     }
   </script>
