--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
     <div class="card">
       <h3>Nearby Clinics</h3>
       <p>Find clinics and health centers close to your location.</p>
-      <button onclick="location.href='Find clinics.html'">Find Clinics</button>
+      <button onclick="location.href='clinics.html'">Find Clinics</button>
     </div>
   </section>
 
