--- a/report.html
+++ b/report.html
@@ -94,7 +94,7 @@
 <body>
 
   <header>
- <h>Public Health Tracker</h1>
+    <h1>Pamoja Health Tracker</h1>
   </header>
 
   <nav>
@@ -114,7 +114,7 @@
       <label for="phone">Phone Number</label>
       <input type="text" id="phone" required>
 
-      <label for="location">Address</label>
+      <label for="location">Location</label>
       <input type="text" id="location" required>
 
       <label for="message">Report Details</label>
@@ -125,7 +125,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Public Health Tracker
+    &copy; 2025 Pamoja Health Tracker
   </footer>
 
   <script>
