--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
     <nav>
       <a href="login.html">Login</a>
       <a href="signup.html">Sign Up</a>
-      <a href="#features">Vipengele</a>
-      <a href="#contact">Wasiliana</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
@@ -102,7 +101,7 @@
   </section>
 
   <section id="features">
-    <h2>Vipengele Muhimu</h2>
+    <h2>Important Aspect</h2>
     <ul>
       <li>📍 Ramani za vituo vya afya</li>
       <li>📊 Ufuatiliaji wa matukio ya afya</li>
